<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mim_control</name>
    <version>0.0.0</version>
    <description>Generic controllers for legged robots</description>
    <maintainer email="stanley.wu@mail.mcgill.ca">Stanley Wu</maintainer><!-- Maintainer for anything related to ROS -->
    <license>BSD-3-Clause</license>

    <depend>mpi_cmake_modules</depend>
    <depend>yaml_utils</depend>

</package>